# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.31.10
	Martin Väth <martin at mvath.de>:
	- Add --nowarn to eix and masked-packages
	- Use --nowarn eix-test-obsolete to print warnings only once:
	  https://bugs.gentoo.org/show_bug.cgi?id=593774
	- eix-sync: Prepend /etc/eix-sync.conf only once, see
	  https://github.com/vaeth/eix/issues/30
	- scripts: speed up ReadBoolean

*eix-0.31.9
	Martin Väth <martin at mvath.de>:
	- scripts: set -f in loops over lines:
	  https://bugs.gentoo.org/show_bug.cgi?id=591422
	- Improve yesno detection (0 or - is false)

*eix-0.31.8
	Martin Väth <martin at mvath.de>:
	- Important change: Add -u for all shell scripts.
	  This can trigger currently hidden bugs ("unbound variable" or
	  "parameter not set" indicate such bugs); please report them if you
	  encounter them. The hope is that in the long run, this step will help
	  to eliminate hidden bugs, although in the moment it can cause pain.
	- Thanks already for some such reports to:
	  Michał Bartoszkiewicz <mbartoszkiewicz at gmail.com>
	- Add etcat script to resemble somewhat etcat -v behaviour
	- New FORMAT_ETCAT and FORMAT_VERSION_ETCAT default variables
	  for etcat type output
	- Support colors in unquoted runtime variables
	- New attributes overlayname, overlay{plain,ver}name{,*}
	- Honour ebuild md5 whenever provided (e.g. by >=portage-2.3.1)
	- Make timestamp optional for assign method (e.g. for >=portage-2.3.1)
	- Honour TMPDIR as requested by POSIX
	- Some more Bourne shell compatibility
	- Internal change: Turn readers into a class
	- Add gcc-6 options

*eix-0.31.7
	Martin Väth <martin at mvath.de>:
	- Support EAPI and (optionally) REQUIRED_USE
	- Extend MATCH_ALGORITHM_EXACT default value to let a pure number match
	  exactly by default (useful for EAPI matching)
	- Reintroduce extended version globbing to match portage:
	  https://github.com/vaeth/eix/issues/21
	  https://bugs.gentoo.org/show_bug.cgi?id=572178
	- Fix metadata-{flat,assign} confusion