@@ -62,7 +62,7 @@ myarg=
 # Once an option with paths as arguments is introduced, it is probably
 # necessary to turn the next command into eval "Push -c ..."
 # In the moment this seems not necessary, so we avoid that security risk:
-Push -c opt `eix --nowarn --print EIX_TEST_OBSOLETE_OPTS`
+Push -c opt `eix --print EIX_TEST_OBSOLETE_OPTS`
 Push opt "$@"
 set -f
 eval "set -- a $opt"
