@@ -24,12 +24,12 @@
 #include "database/header.h"
 #include "database/io.h"
 #include "eixTk/argsreader.h"
-#include "eixTk/exceptions.h"
 #include "eixTk/filenames.h"
 #include "eixTk/formated.h"
 #include "eixTk/i18n.h"
 #include "eixTk/likely.h"
 #include "eixTk/null.h"
+#include "eixTk/parseerror.h"
 #include "eixTk/percentage.h"
 #include "eixTk/statusline.h"
 #include "eixTk/stringtypes.h"
@@ -176,7 +176,6 @@ typedef list <ArgPair> MethodArgs;
 typedef MethodArgs RepoArgs;
 static MethodArgs *method_args;
 static RepoArgs *repo_args;
-static const ParseError *parse_error;
 
 static const char *outputname = NULLPTR;
 static const char *var_to_print = NULLPTR;
@@ -360,15 +359,14 @@ int run_eix_update(int argc, char *argv[]) {
 		return EXIT_FAILURE;
 	}
 
-	parse_error = new ParseError;
 	if(unlikely(var_to_print != NULLPTR)) {
-		if(eixrc.print_var(var_to_print, parse_error)) {
+		if(eixrc.print_var(var_to_print)) {
 			return EXIT_SUCCESS;
 		}
 		return EXIT_FAILURE;
 	}
 	if(unlikely(known_vars)) {
-		eixrc.known_vars(parse_error);
+		eixrc.known_vars();
 		return EXIT_SUCCESS;
 	}
 	if(unlikely(show_help)) {
@@ -405,8 +403,9 @@ int run_eix_update(int argc, char *argv[]) {
 			split_string(eixrc["TERM_SOFTSTATUSLINE"]))),
 		program_name, eixrc["EXIT_STATUSLINE"]);
 
+	ParseError parse_error;
 	INFO(_("Reading Portage settings...\n"));
-	PortageSettings portage_settings(&eixrc, parse_error, false, true);
+	PortageSettings portage_settings(&eixrc, &parse_error, false, true);
 
 	/* Build default (overlay/method/...) lists, using environment vars */
 	Overrides override_list;
