@@ -10,28 +10,41 @@
 #include <config.h>
 
 #include <iostream>
+#include <set>
 #include <string>
 
-#include "eixTk/exceptions.h"
 #include "eixTk/formated.h"
 #include "eixTk/i18n.h"
 #include "eixTk/likely.h"
+#include "eixTk/null.h"
+#include "eixTk/parseerror.h"
 #include "eixTk/stringtypes.h"
 #include "eixTk/stringutils.h"
 
 using std::string;
+using std::set;
 
 using std::cerr;
 using std::endl;
+
+static set<string> *printed = NULLPTR;
 
 /**
 Provide a common look for error-messages for parse-errors in
 portage.{mask,keywords,..}
 **/
 void ParseError::output(const string& file, const LineVec::size_type line_nr, const string& line, const string& errtext) const {
-	if(!m_output) {
+	if(tacit) {
 		return;
 	}
+	if(printed == NULLPTR) {
+		printed = new set<string>;
+	}
+	string cache(eix::format("%s\a%s\v%s") % file % line_nr % errtext);
+	if(printed->find(cache) != printed->end()) {
+		return;
+	}
+	printed->insert(cache);
 	cerr << eix::format(_("-- invalid line %s in %s: \"%s\""))
 		% line_nr % file % line << endl;
 
@@ -41,5 +54,4 @@ void ParseError::output(const string& file, const LineVec::size_type line_nr, co
 	for(WordVec::const_iterator i(lines.begin()); likely(i != lines.end()); ++i) {
 		cerr << "    " << *i << endl;
 	}
-	cerr << endl;
 }
